s6 overflow issue fixed

--- a/scss/_s6.scss
+++ b/scss/_s6.scss
@@ -7,7 +7,6 @@
 .s6 {
     gap: 3rem;
     z-index: 5;
-    overflow-x: hidden;
 
     .reverse.caption{
         display: flex;
@@ -83,8 +82,8 @@
             }
 
             img{
-                width: 160px;
-                height: 160px;
+                width: 144px;
+                height: 144px;
                 transform: scale(0);
                 transition: all 1s ease-in-out;
 
@@ -100,7 +99,7 @@
 
             p{
                 text-align: start;
-                font-size: 1rem;
+                font-size: 1.1rem;
                 font-weight: 600;
 
                 @media (max-width:1400px){
